Bug 160401 - FILEOPEN PPTX: wrong word order and font size when cap="small" on right-to-left text (Regression)
Summary: FILEOPEN PPTX: wrong word order and font size when cap="small" on right-to-le...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2 t...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: RTL
  Show dependency treegraph
 
Reported: 2024-03-27 21:30 UTC by Pablo
Modified: 2024-08-03 09:15 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
pptx showing the issue in the second line of text (31.77 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2024-03-27 21:32 UTC, Pablo
Details
pdf exported from PowerPoint showing the expected result (25.37 KB, application/pdf)
2024-03-27 21:32 UTC, Pablo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pablo 2024-03-27 21:30:48 UTC
Description:
The attached PPTX has two text shapes. The text in both lines should render the same.
The second shape has cap="small" set. In Impress 24.2 the word order in the second line is flipped and the font size is smaller.

Steps to Reproduce:
1. Import the attached PPTX to Impress.
2. Compare the first and second text shapes.

Actual Results:
The word order in the second line is flipped and the font size is smaller.

Expected Results:
Both text shapes should render the same. Small caps should make no difference in Hebrew text.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Works in 7.4.7.2 but not in 24.2.0.3.

This bug might be related to small caps support in 24.2:
https://bugs.documentfoundation.org/show_bug.cgi?id=98367
Comment 1 Pablo 2024-03-27 21:32:02 UTC
Created attachment 193356 [details]
pptx showing the issue in the second line of text
Comment 2 Pablo 2024-03-27 21:32:30 UTC
Created attachment 193357 [details]
pdf exported from PowerPoint showing the expected result
Comment 3 stragu 2024-03-28 04:11:20 UTC
Thanks for the report.

Reproduced in:

Version: 24.2.2.1 (X86_64) / LibreOffice Community
Build ID: bf759d854b5ab45b6ef0bfd22e51c6dc4fb8b882
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Not reproduced in:

Version: 7.6.5.2 (X86_64) / LibreOffice Community
Build ID: 38d5f62f85355c192ef5f1dd47c5c0c0c6d6598b
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

(In reply to Pablo from comment #0)
> This bug might be related to small caps support in 24.2:
> https://bugs.documentfoundation.org/show_bug.cgi?id=98367
Indeed, this started with the following commit (build [ce47fbc78876e5e6a7fef90346aa6415da1a1851] in linux-64-24.2 repo):

commit ffaed5cae29d6bb14faf870cb935ccd3c35d4a3c
author	Caolán McNamara 	Fri Aug 18 17:29:24 2023 +0100
committer	Caolán McNamara 	Tue Aug 22 15:29:03 2023 +0200
tdf#98367 implement rendering of draw/impress small capitals
arising out of Þe old tdf#91932
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155846

Caolán, can you please have a look?
Comment 4 Caolán McNamara 2024-06-11 20:41:23 UTC
The preview is correct, but the final rendering not, so presumably goes wrong on generating the final portions
Comment 5 Caolán McNamara 2024-06-12 13:39:21 UTC
ah, right, no point figuring out the right ordering of portions, we simply shouldn't do anything at all here: https://gerrit.libreoffice.org/c/core/+/168733
Comment 6 Commit Notification 2024-06-12 15:15:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5ad110499343d2ec0469e605168c1c1cd129d0e7

Resolves: tdf#160401/#i78474# small caps do not exist in CTL fonts

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2024-06-12 18:51:29 UTC
backport to 28.8 and 24.02 in gerrit
Comment 8 Commit Notification 2024-06-12 20:51:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/881da7fd2624514f8edc05832915ace52bce0a5d

Resolves: tdf#160401/#i78474# small caps do not exist in CTL fonts

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Eyal Rozenberg 2024-06-12 21:01:18 UTC
Thanks, Caolan :-)
Comment 10 Commit Notification 2024-06-13 11:20:52 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/44529bbd1cad7840c17c53452d73f7f7fbe048c0

Resolves: tdf#160401/#i78474# small caps do not exist in CTL fonts

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2024-06-13 13:28:18 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/96f22f5e5302e030fcbc939ef94b7c1fd2748df2

tdf#160401: vcl_pdfexport: Add unittest

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.