Resolves: tdf#160401/#i78474# small caps do not exist in CTL fonts

so turn that off here in editeng where we know the script type

Change-Id: I8e385d35910e378655deb21bce89c4335724a36d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168716
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Jenkins