editeng/source/editeng/impedit3.cxx
@@ -3063,6 +3063,10 @@ void ImpEditEngine::SeekCursor( ContentNode* pNode, sal_Int32 nPos, SvxFont& rFo
     if ( (rFont.GetKerning() != FontKerning::NONE) && IsKernAsianPunctuation() && ( nScriptTypeI18N == i18n::ScriptType::ASIAN ) )
         rFont.SetKerning( rFont.GetKerning() | FontKerning::Asian );
 
+    // tdf#160401/#i78474# small caps do not exist in CTL fonts, so turn that off here where we know the script type
+    if (nScriptTypeI18N == i18n::ScriptType::COMPLEX && rFont.IsCapital())
+        rFont.SetCaseMap(SvxCaseMap::NotMapped);
+
     if (maStatus.DoNotUseColors())
     {
         rFont.SetColor( /* rColorItem.GetValue() */ COL_BLACK );
